stat: confirm win rates are norm distribution

--- a/notebook/private/17Lands_Game.ipynb
+++ b/notebook/private/17Lands_Game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "<Axes: title={'center': 'User Games Distribution'}, xlabel='user_n_games_bucket'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "0   100.0  100.0  100.0  100.0  100.0  100.0  500.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "<Axes: title={'center': 'User Game Win Rate Distribution'}, xlabel='user_game_win_rate_bucket'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -464,6 +464,53 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9742240309715271, pvalue=0.752464771270752)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "import numpy as np\n",
+    "\n",
+    "win_rates = user_game_win_rates['user_game_win_rate_bucket'].values\n",
+    "scipy.stats.shapiro(win_rates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean = 0.5474899977032837, stddev = 0.06170110567098339\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.weightstats import DescrStatsW\n",
+    "\n",
+    "win_rates = user_game_win_rates['user_game_win_rate_bucket']\n",
+    "counts = user_game_win_rates['count']\n",
+    "\n",
+    "weighted_stats = DescrStatsW(win_rates, weights=counts, ddof=0)\n",
+    "print(f'mean = {weighted_stats.mean}, stddev = {weighted_stats.std}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
