--- a/notebook/private/17Lands_Game.ipynb
+++ b/notebook/private/17Lands_Game.ipynb
@@ -216,7 +216,7 @@
     "SELECT\n",
     "    expansion, event_type, draft_id, draft_time, game_time, build_index, match_number, game_number, rank, opp_rank, main_colors, splash_colors, on_play, num_mulligans, opp_num_mulligans, opp_colors, num_turns, won, user_n_games_bucket, user_game_win_rate_bucket\n",
     "FROM\n",
-    "    'https://17lands-public.s3.amazonaws.com/analysis_data/game_data/game_data_public.LCI.PremierDraft.csv.gz'"
+    "    'https://17lands-public.s3.amazonaws.com/analysis_data/game_data/game_data_public.BRO.PremierDraft.csv.gz'"
    ]
   },
   {
@@ -481,7 +481,7 @@
     "import scipy\n",
     "import numpy as np\n",
     "\n",
-    "win_rates = user_game_win_rates['user_game_win_rate_bucket'].values\n",
+    "win_rates = user_game_win_rates['count'].values\n",
     "scipy.stats.shapiro(win_rates)"
    ]
   },
