feat: gen report from 17Lands_Any notebook

--- a/notebook/private/17Lands_Any.ipynb
+++ b/notebook/private/17Lands_Any.ipynb
@@ -24,7 +24,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "set_name = 'LCI'"
