feat: support load data from online

--- a/notebook/private/17Lands_Any.ipynb
+++ b/notebook/private/17Lands_Any.ipynb
@@ -31,7 +31,22 @@
    },
    "outputs": [],
    "source": [
-    "set_name = 'LCI'"
+    "set_name = 'LCI'\n",
+    "local_data = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if local_data:\n",
+    "    GAME_DATA_SOURCE = '~/Downloads/game_data_public.{}.PremierDraft.csv.gz'.format(set_name)\n",
+    "    DRAFT_DATA_SOURCE = '~/Downloads/draft_data_public.{}.PremierDraft.csv.gz'.format(set_name)\n",
+    "else:\n",
+    "    GAME_DATA_SOURCE = 'https://17lands-public.s3.amazonaws.com/analysis_data/game_data/game_data_public.{}.PremierDraft.csv.gz'.format(set_name)\n",
+    "    DRAFT_DATA_SOURCE = 'https://17lands-public.s3.amazonaws.com/analysis_data/draft_data/draft_data_public.{}.PremierDraft.csv.gz'.format(set_name)"
    ]
   },
   {
@@ -220,8 +235,7 @@
     "SELECT\n",
     "    expansion, event_type, draft_id, draft_time, build_index, match_number, game_number, rank, opp_rank, main_colors, splash_colors, on_play, num_mulligans, opp_num_mulligans, opp_colors, num_turns, won, user_n_games_bucket, user_game_win_rate_bucket\n",
     "FROM\n",
-    "    # 'https://17lands-public.s3.amazonaws.com/analysis_data/game_data/game_data_public.{{ set_name }}.PremierDraft.csv.gz'\n",
-    "    '~/Downloads/game_data_public.{{ set_name }}.PremierDraft.csv.gz'"
+    "    '{{ GAME_DATA_SOURCE }}'"
    ]
   },
   {
@@ -440,8 +454,7 @@
     "    user_n_games_bucket,\n",
     "    user_game_win_rate_bucket,\n",
     "FROM\n",
-    "    # 'https://17lands-public.s3.amazonaws.com/analysis_data/draft_data/draft_data_public.{{ set_name }}.PremierDraft.csv.gz'\n",
-    "    '~/Downloads/draft_data_public.{{ set_name }}.PremierDraft.csv.gz'"
+    "    '{{ DRAFT_DATA_SOURCE}}'"
    ]
   },
   {
@@ -532,7 +545,10 @@
     "scryfall_oracle_cards_download_uri = response.json()['download_uri']\n",
     "del response\n",
     "\n",
-    "scryfall_oracle_cards_download_uri"
+    "if local_data:\n",
+    "    SCRYFALL_ORACLE_CARDS_SOURCE = '~/Downloads/scryfall-oracle-cards.json'\n",
+    "else:\n",
+    "    SCRYFALL_ORACLE_CARDS_SOURCE = scryfall_oracle_cards_download_uri"
    ]
   },
   {
@@ -584,9 +600,7 @@
     "%%sql\n",
     "\n",
     "DROP TABLE IF EXISTS scryfall_oracle_cards;\n",
-    "# CREATE TABLE scryfall_oracle_cards AS FROM read_json_auto('{{ scryfall_oracle_cards_download_uri }}')\n",
-    "# 'https://data.scryfall.io/oracle-cards/oracle-cards-20240109100132.json'\n",
-    "CREATE TABLE scryfall_oracle_cards AS FROM read_json_auto('~/Downloads/oracle-cards-20240109100132.json')"
+    "CREATE TABLE scryfall_oracle_cards AS FROM read_json_auto('{{ SCRYFALL_ORACLE_CARDS_SOURCE }}')"
    ]
   },
   {
